[package]
name = "rocket-api"
version = "0.1.0"
edition = "2021"
authors = ["Johan <johanjimenez0210@gmail.com> Zeroprograming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"]}
serde = {version= "1.0.164", features = ["derive"]}
bcrypt = "0.14.0"
chrono = "0.4.26"
jsonwebtoken = "8.3.0"
rand_core = { version = "0.6.4", features = ["std"] }
base64 = "0.21.2"
regex = "1.8.4"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
schemars = "0.8.12"
okapi = { version = "0.7.0-rc.1" }
rocket_okapi = { version = "0.8.0-rc.3", features = ["swagger"] }

[dependencies.mongodb]
version = "2.5.0"
default-features = false
features = ["async-std-runtime"]